--- a/less/elements/btn.less
+++ b/less/elements/btn.less
@@ -5,4 +5,14 @@
   border-radius: 5px;
   font-size: 17px;
   cursor: pointer;
+  &:hover {
+    background-color: darken(@orange, 10%);
+  }
+}
+
+@media @tablet {
+  .btn {
+    padding: 15px 30px;
+    font-size: 20px;
+  }
 }
