--- a/less/elements/link.less
+++ b/less/elements/link.less
@@ -4,13 +4,13 @@
     border-bottom: 1px solid fade(@black, 30%);
     &:hover {
       color: @orange;
-      border: none;
+      border-bottom: 1px solid fade(@black, 0%);
     }
   }
   &--orange {
     border-bottom: 1px solid fade(@orange, 30%);
     &:hover {
-      border: none;
+      border-bottom: 1px solid fade(@orange, 0%);
     }
   }
 }
