--- a/less/elements/title.less
+++ b/less/elements/title.less
@@ -3,10 +3,24 @@
     font-size: 19px;
     line-height: 25px;
   }
+  &--h2 {
+    font-size: 18px;
+  }
   &--h3 {
     font-size: 16px;
   }
-  &--h2 {
-    font-size: 18px;
+}
+
+@media @tablet {
+  .title {
+    &--h1 {
+      font-size: 22px;
+    }
+    &--h2 {
+      font-size: 20px;
+    }
+     &--h3 {
+      font-size: 18px;
+    }
   }
 }
