--- a/less/layout/page-footer.less
+++ b/less/layout/page-footer.less
@@ -2,19 +2,18 @@
   position: relative;
   z-index: 10;
   height: 200px;
-  width: 100%;
   display: flex;
   flex-directcion: column-reverse;
+  justify-content: space-between;
   flex-wrap: wrap;
   font-size: 14px;
   text-align: center;
   &:after {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 320px;
-    top: -50%;
-    right: 0;
+    left: -4%;
+    right: -4%;
+    height: 200px;
     z-index: -1;
     background-image: linear-gradient(to top, #ffe59f, rgba(255, 233, 186, 0.74) 53%, rgba(255, 233, 186, 0.01));
   }
@@ -29,15 +28,20 @@
   height: auto;
   display: block;
   margin: 0 auto;
+  width: 100%;
 }
 
 .page-footer__docs-link {
-  display: block;
+  display: inline-block;
   width: auto;
   padding-top: 30px;
+  margin: 0 auto;
   &:first-child {
     width: 51%;
     margin: 0 auto;
+  }
+  a {
+    text-align: center;
   }
 }
 
@@ -45,4 +49,39 @@
   margin: 0 auto;
   display: block;
   order: 2;
+}
+
+@media @tablet {
+  .page-footer {
+    display: flex;
+    direction: row;
+    justify-content: space-between;
+    height: 90px;
+    margin-top: -8px;
+    &:after {
+      height: 90px;
+      background-image: linear-gradient(to top, #ffe59f, rgba(255, 233, 186, 0.74) 73%, rgba(255, 233, 186, 0.01));
+    }
+  }
+  .page-footer__dev-info {
+    display: inline-block;
+    padding-top: 20px;
+    margin: 0;
+    order: 1;
+  }
+  .page-footer__docs {
+    padding-top: 20px;
+    height: inherit;
+    margin-top: -35px;
+    display: inline-block;
+    text-align: -webkit-right;
+    order: 2;
+  }
+  .page-footer__docs-link {
+    display: block;
+    padding-top: 0;
+    &:first-child {
+      margin: 0 0 10px;
+    }
+  }
 }
