--- a/less/layout/page-header.less
+++ b/less/layout/page-header.less
@@ -1,6 +1,5 @@
 .page-header {
   padding-top: 10px;
-  position: relative;
   z-index: 10;
   height: auto;
   width: 100%;
@@ -25,15 +24,21 @@
   display: inline-block;
   vertical-align: middle;
 }
+
 .page-header__logo-text {
   display: inline-block;
   vertical-align: middle;
 }
 
 .page-header__logo-text-main {
-  font-family: @helvetica-bold;
+  font-family: @helvetica;
   font-weight: 700;
   margin-left: 5px;
+  font-size: 16px;
+}
+
+.page-header__logo-text-slogan {
+  display: none;
 }
 
 .page-header__toggler {
@@ -43,15 +48,13 @@
   background-image: url(../img/svg/toggler.svg);
 }
 
-.page-header__logo-text-slogan {
-  display: none;
-}
-
 .page-header__menu {
   display: none;
   position: absolute;
+  z-index: 100;
   top: 0;
-  width: 100%;
+  left: -4%;
+  right: -4%;
   text-align: center;
   background-color: @dark-gray;
 }
@@ -61,7 +64,6 @@
   color: @white;
   &--close {
     padding: 10px;
-    width: 100%;
     background-color: @gray;
     font-size: 13px
   }
@@ -83,4 +85,18 @@
 
 .page-header__menu-list-item--cart a {
   color: @orange;
+}
+
+@media @tablet {
+  .page-header__logo img {
+    width: 45px;
+    height: 45px;
+  }
+  .page-header__logo-text-main {
+    font-size: 17px;
+  }
+  .page-header__toggler {
+    width: 30px;
+    height: 19px;
+  }
 }
