--- a/less/pages/index/index-contacts.less
+++ b/less/pages/index/index-contacts.less
@@ -9,9 +9,9 @@
   &:before {
     content: "";
     position: absolute;
-    width: 100%;
     border: 1px dashed @orange;
-    left: 0;
+    left: -4%;
+    right: -4%;
     top: 48%;
     z-index: -1;
   }
@@ -53,4 +53,31 @@
   border: 0;
   width: 100%;
   height: 290px;
+}
+
+@media @tablet {
+  .index-contacts__title {
+    text-align: left;
+    position: static;
+    &:before {
+      display: none;
+    }
+    &:after {
+      display: none;
+    }
+  }
+  .index-contacts__desc {
+    padding: 20px 0 20px;
+    line-height: 22px;
+    font-size: 16px;
+  }
+  .index-contacts__list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .index-contacts__list-item-title {
+    margin-bottom: 5px;
+  }
+  .index-contacts__map iframe {
+  }
 }
