--- a/less/pages/index/index-intro.less
+++ b/less/pages/index/index-intro.less
@@ -1,4 +1,3 @@
-
 .index-intro {
   height: auto;
   position: relative;
@@ -45,7 +44,7 @@
 .index-intro__actions-btn {
   display: inline-block;
   vertical-align: middle;
-  height: 32px;
+  height: auto;
   padding-top: 7px;
   font-size: 14px;
 }
@@ -54,4 +53,75 @@
   display: inline-block;
   vertical-align: middle;
   height: 32px;
+  &::-webkit-input-placeholder {
+    padding-left: 25px;
+    font-size: 13px;
+  }
+  &::-moz-placeholder {
+    padding-left: 25px;
+    font-size: 13px;
+  }
+  &:-ms-input-placeholder {
+    padding-left: 25px;
+    font-size: 13px;
+  }
+}
+
+@media @tablet {
+  .index-intro {
+    &:after {
+      content: "";
+      position: absolute;
+      background: url(../img/header-pic-tab.png) no-repeat;
+      background-size: contain;
+      width: 350px;
+      height: 290px;
+      top: 10%;
+      right: -4.4%;
+      z-index: 1;
+
+    overflow-x: hidden;
+    }
+  }
+
+  .index-intro__text {
+    width: 390px;
+  }
+  .index-intro__text-title {
+    display: inline;
+  }
+  .index-intro__text-link {
+    font-size: 22px;
+  }
+  .index-intro__text-desc {
+    margin-top: 7px;
+    font-size: 16px;
+  }
+  .index-intro__actions {
+    width: 360px;
+    display: flex;
+  }
+  .index-intro__actions-btn {
+    height: 40px;
+    padding-top: 10px;
+    font-size: 16px;
+  }
+  .index-intro__actions-input {
+    height: 40px;
+    width: 200px;
+    padding-right: 30px;
+    &::-webkit-input-placeholder {
+      padding-bottom: 0;
+      padding-left: 30px;
+      font-size: 15px;
+    }
+    &::-moz-placeholder {
+      padding-left: 25px;
+      font-size: 15px;
+    }
+    &:-ms-input-placeholder {
+      padding-left: 25px;
+      font-size: 15px;
+    }
+  }
 }
