--- a/less/elements/title.less
+++ b/less/elements/title.less
@@ -20,6 +20,20 @@
       font-size: 20px;
     }
      &--h3 {
+      font-size: 17px;
+    }
+  }
+}
+
+@media @desktop {
+  .title {
+    &--h1 {
+      font-size: 30px;
+    }
+    &--h2 {
+      font-size: 22px;
+    }
+     &--h3 {
       font-size: 18px;
     }
   }
