--- a/less/pages/index/index-shipping.less
+++ b/less/pages/index/index-shipping.less
@@ -39,6 +39,7 @@
     position: relative;
     &:before {
       content: "1";
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding-top: 8px;
       font-size: 30px;
@@ -56,6 +57,7 @@
     position: relative;
     &:before {
       content: "2";
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding-top: 8px;
       font-size: 30px;
@@ -73,6 +75,7 @@
     position: relative;
     &:before {
       content: "3";
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding-top: 8px;
       font-size: 30px;
@@ -90,6 +93,7 @@
     position: relative;
     &:before {
       content: "4";
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       padding-top: 8px;
       font-size: 30px;
@@ -173,13 +177,14 @@
     &--1,
     &--2,
     &--3,
-    &--4, {
-    &:before {
-      left: 0;
-      top: 0;
+    &--4,
+    {
+      &:before {
+        left: 0;
+        top: 0;
+      }
     }
   }
-}
   .index-shipping__list-item-title {
     padding-left: 0;
     margin-bottom: 5px;
@@ -193,5 +198,56 @@
     top: 40%;
     right: 6%;
     width: 35%;
+  }
+}
+
+@media @desktop {
+  .index-shipping {
+    padding-bottom: 20px;
+  }
+  .index-shipping__list {
+    padding-top: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 80%;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .index-shipping__list-item {
+    padding-left: 70px;
+    width: 40%;
+    margin-right: 40px;
+  }
+  .index-shipping__list-item-desc {
+    font-size: 17px;
+    line-height: 20px;
+  }
+  .index-shipping__factoid {
+    position: absolute;
+    top: 10%;
+    right: 0%;
+    width: 20%;
+    img {
+      width: 80%;
+    }
+  }
+  .index-shipping__feedback {
+    width: 20%;
+    position: absolute;
+    bottom: 17%;
+    right: 0%;
+  }
+  .index-shipping__feedback-desc {
+    padding-top: 14px;
+    margin-bottom: 10px;
+    font-size: 15px;
+  }
+  .index-shipping__feedback-btn {
+    font-size: 16px;
+    display: inline-block;
+    margin-bottom: 24px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
